force-app/main/default/objects/Work_Order__c/fields/Labour_Charge__c.field-meta.xml
<CustomField>
    <fullName>Labour_Charge__c</fullName>
    <label>Labour Charge</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>