force-app/main/default/objects/Work_Order__c/fields/Parts_Total__c.field-meta.xml
<CustomField>
    <fullName>Parts_Total__c</fullName>
    <label>Parts Total</label>
    <summarizedField>Part_Usage__c.Line_Total__c</summarizedField>
    <summaryForeignKey>Part_Usage__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>