force-app/main/default/objects/Work_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASSIGNED</fullName>
                <default>true</default>
                <label>ASSIGNED</label>
            </value>
            <value>
                <fullName>ACCEPTED</fullName>
            </value>
            <value>
                <fullName>EN_ROUTE</fullName>
            </value>
            <value>
                <fullName>ON_SITE</fullName>
            </value>
            <value>
                <fullName>IN_PROGRESS</fullName>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>