force-app/main/default/objects/Work_Order__c/validationRules/End_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_After_Start</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Start_Time__c)), NOT(ISBLANK(End_Time__c)), End_Time__c &lt; Start_Time__c)</errorConditionFormula>
    <errorMessage>End Time cannot be before Start Time.</errorMessage>
</ValidationRule>